--- a/web_design/Home.html
+++ b/web_design/Home.html
@@ -102,7 +102,7 @@ body {
   <a href="#about">About Us</a>
   <a class="active" href="#home">Home</a>
 </div>
-  <h1>Introducing LAFEL</h1>
+  <h1>INTRODUCING LAFEL</h1>
   <p>Helping you find the services you need</p>
 </body>
 </html>
