--- a/web_design/HTML/RecentPosts.html
+++ b/web_design/HTML/RecentPosts.html
@@ -3,78 +3,9 @@
 <head>
 	<title>LAFEL - Recent Posts</title>
 	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/luBw2xC.png">
+	<link rel="stylesheet" type="text/css" href="../CSS/Styles.css">
 </head>
 <style>
-body {
-  margin: 0;
-  font-family: Garamond, Helvetica, sans-serif;
-}
-
-.topnav {
-  overflow: hidden;
-  background-color: white;
-}
-
-.topnav a {
-  float: right;
-  color: #f4d34e;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 27px;
-}
-
-.topnav a:hover {
-  background-color: #f4d34e;
-  color: #605e55;
-}
-
-.topnav a.active {
-  background-color: #f4d34e;
-  color: white;
-}
-.topnav a.logo {
-  float: left;
-  color: #f4d34e;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 27px;
-}
-
-.topnav a.brand {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 45px;
-  font-family: 'Garamond';
- }
- 
-
-
-.topnav .search-container {
-  float: right;
-}
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: none;
-  cursor: pointer;
-}
 
  h1 {
    color: black;
