--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -1,102 +1,13 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>LAFEL - Contact</title>
+	<link rel="stylesheet" type="text/css" href="../CSS/Styles.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/Contact.css">
 </head>
 <body>
 <style>
-body {
-  margin: 0;
-  font-family: Garamond, Helvetica, sans-serif;
-}
 
-.topnav {
-  overflow: hidden;
-}
-
-.topnav a {
-  float: right;
-  color: #f4d34e;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 27px;
-}
-
-.topnav a:hover {
-  background-color: #f4d34e;
-  color: #605e55;
-}
-
-.topnav a.active {
-  background-color: #f4d34e;
-  color: white;
-}
-.topnav a.logo {
-  float: left;
-  color: #f4d34e;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 27px;
-}
-
-.topnav a.brand {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 45px;
-  font-family: 'Garamond';
- }
- 
- h1 {
-   color: black;
-   text-align: center;
-   text-decoration: bold;
-   font-size: 38px;
-   font-family: 'Garamond', sans-serif;
- }
- h2 {
-   color: black;
-   text-align: Left;
-   text-decoration: bold;
-   font-size: 17px;
-   font-family: 'Garamond', sans-serif;
- }
- .topnav .search-container {
-  float: right;
-}
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: 1px;
-  cursor: pointer;
-}
-
-div.a {
-  text-indent: 100px;
-}
-
-div.b {
-   text-indent: 10%;
-}
-div.c {
-   text-indent: 10em;
-}
 </style>
 </head>
 <body>
