--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>LAFEL - Contact</title>
+	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/luBw2xC.png">
 	<link rel="stylesheet" type="text/css" href="../CSS/Styles.css">
 	<link rel="stylesheet" type="text/css" href="../CSS/Contact.css">
 </head>
