--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -121,7 +121,8 @@ div.c {
   <a href="#about">About Us</a>
   <a href="#home">Home</a>
 </div>
-  <h1><br>GET IN CONTACT WITH US!</h1>
+<hr/>
+  <h1>GET IN CONTACT WITH US!</h1>
   <div class="a">
   <form action="/action_page.php">
   <p><label for="fname">Name*:</label></p>
