--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -141,7 +141,9 @@ div.c {
   </div>
   <div class="b">
      <input type="text" placeholder="Type your message..." name="message"><br><br>
-     <p style="margin-left:10%; margin-right:10%;"><input type="submit" value="SUBMIT">
+     <div style="float:center;margin: 40px;">
+     <p style="margin-left:50%; margin-right:10%;"><input type="submit" value="SUBMIT">
+     </div>
   </form> 
   </div>
   <hr/>
