--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -125,7 +125,7 @@ div.c {
   <h1>GET IN CONTACT WITH US!</h1>
   <div class="a">
   <form action="/action_page.php">
-  <p><label for="fname">Name*:</label></p>
+    <p><label for="fname">NAME*:</label></p>
   </div>
   <div class="b">
 	<input type="text" placeholder="Enter your name..." name="fname"><br>  
