--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -125,24 +125,24 @@ div.c {
   <h1>GET IN CONTACT WITH US!</h1>
   <div class="a">
   <form action="/action_page.php">
-    <p><label for="fname">NAME*:</label></p>
+    <p><b><label for="fname">NAME*:</label></b></p>
   </div>
   <div class="b">
 	<input type="text" placeholder="Enter your name..." name="fname"><br>  
   </div>
   <div class="a">
-  <p><label for="email">E-mail*:</label><br><p>
+  <p><b><label for="email">E-MAIL*:</label><br></b><p>
   </div>
   <div class="b">
   <input type="text" placeholder="Enter your e-mail adress..." name="email"><br>
   </div>
   <div class="a">
-  <p><label for="message">Message*:</label><br></p>
+  <p><b><label for="message">MESSAGE*:</label><br></b></p>
   </div>
   <div class="b">
      <input type="text" placeholder="Type your message..." name="message"><br><br>
      <div style="float:center;margin: 40px;">
-     <p style="margin-left:50%; margin-right:10%;"><input type="submit" value="SUBMIT">
+     <p style="margin-left:50%; margin-right:10%;"><a href="confirm.html" >SUBMIT</a>
      </div>
   </form> 
   </div>
