--- a/web_design/HTML/About.html
+++ b/web_design/HTML/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LAFEL - About</title>
+	<title>DingDong! - About</title>
 	<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/DingDong-ENG/main/main/images/logo3.png?token=GHSAT0AAAAAABZRY3CHH3CFTWIVUJIMIMFMY267X2Q">
 </head>
 <style>
@@ -154,8 +154,8 @@ img {vertical-align: middle;}
 </head>
 
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://raw.githubusercontent.com/DingDong-ENG/main/main/images/logo3.png?token=GHSAT0AAAAAABZRY3CHH3CFTWIVUJIMIMFMY267X2Q" alt="LAFEL Bell" width="45" height="45"></a>
-  <a class="brand" href="#home">LAFEL</a>
+  <a class="logo" href="#home"><img src="https://raw.githubusercontent.com/DingDong-ENG/main/main/images/logo3.png?token=GHSAT0AAAAAABZRY3CHH3CFTWIVUJIMIMFMY267X2Q" alt="DingDong! Bell" width="45" height="45"></a>
+  <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search for services..." name="search">
