--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -108,7 +108,7 @@ div.c {
 </head>
 <body>
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://i.imgur.com/QupdNyN.png" alt="LAFEL Bell" width="45" height="45"></a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/QupdNyN.png" alt="DingDong Bell" width="45" height="45"></a>
   <a class="brand" href="#home">DingDong</a>
   <div class="search-container">
     <form action="/action_page.php">
