--- a/web_design/HTML/Home.html
+++ b/web_design/HTML/Home.html
@@ -14,7 +14,7 @@ body {
 </style>
 </head>
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://i.imgur.com/luBw2xC.png" alt="LAFEL Bell" width="45" height="45"></a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/luBw2xC.png" alt="DingDong Bell" width="45" height="45"></a>
   <a class="brand" href="#home">DingDong</a>
   <div class="search-container">
     <form action="/action_page.php">
