--- a/web_design/HTML/RecentPosts.html
+++ b/web_design/HTML/RecentPosts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>LAFEL - Recent Posts</title>
+	<title>DingDong - Recent Posts</title>
 	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/luBw2xC.png">
 	<link rel="stylesheet" type="text/css" href="../CSS/Styles.css">
 </head>
@@ -43,8 +43,8 @@ a:active {
 }
 </style>
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://i.imgur.com/luBw2xC.png" alt="LAFEL Bell" width="45" height="45"></a>
-  <a class="brand" href="#home">LAFEL</a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/luBw2xC.png" alt="DingDong Bell" width="45" height="45"></a>
+  <a class="brand" href="#home">DingDong</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search for services..." name="search">
