--- a/web_design/HTML/RecentPosts.html
+++ b/web_design/HTML/RecentPosts.html
@@ -44,7 +44,7 @@ a:active {
 </style>
 <div class="topnav">
   <a class="logo" href="#home"><img src="https://i.imgur.com/luBw2xC.png" alt="DingDong Bell" width="45" height="45"></a>
-  <a class="brand" href="#home">DingDong</a>
+  <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
     <form action="/action_page.php">
       <input type="text" placeholder="Search for services..." name="search">
