--- a/web_design/HTML/About.html
+++ b/web_design/HTML/About.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>DingDong! - About</title>
-	<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/DingDong-ENG/main/main/images/logo3.png?token=GHSAT0AAAAAABZRY3CHH3CFTWIVUJIMIMFMY267X2Q">
+	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/ScFOaet.png">
 </head>
 <style>
 body {
@@ -154,7 +154,7 @@ img {vertical-align: middle;}
 </head>
 
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://raw.githubusercontent.com/DingDong-ENG/main/main/images/logo3.png?token=GHSAT0AAAAAABZRY3CHH3CFTWIVUJIMIMFMY267X2Q" alt="DingDong! Bell" width="45" height="45"></a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/ScFOaet.png" alt="DingDong! Bell" width="45" height="45"></a>
   <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
     <form action="/action_page.php">
