--- a/web_design/HTML/RecentPosts.html
+++ b/web_design/HTML/RecentPosts.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>DingDong - Recent Posts</title>
-	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/luBw2xC.png">
+	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/ScFOaet.png">
 	<link rel="stylesheet" type="text/css" href="../CSS/Styles.css">
 </head>
 <style>
@@ -43,7 +43,7 @@ a:active {
 }
 </style>
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://i.imgur.com/luBw2xC.png" alt="DingDong Bell" width="45" height="45"></a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/ScFOaet.png" alt="DingDong Bell" width="45" height="45"></a>
   <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
     <form action="/action_page.php">
