--- a/web_design/HTML/Search.html
+++ b/web_design/HTML/Search.html
@@ -41,7 +41,7 @@ a:active {
   <a class="logo" href="#home"><img src="https://i.imgur.com/pcURI5z.png" alt="DingDong! Bell" width="45" height="45"></a>
   <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
-    <form action="/action_page.php">
+    <form action="../HTML/Search.html">
       <input type="text" placeholder="Search for services..." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
