--- a/web_design/HTML/About.html
+++ b/web_design/HTML/About.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 	<title>DingDong! - About</title>
-	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/ScFOaet.png">
+	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/pcURI5z.png">
 </head>
+<script type="text/javascript" src="../JavaScript/About.js"></script>
 <style>
 body {
   margin: 0;
@@ -69,6 +70,16 @@ body {
    border: 2px #f4d34e;
    margin: auto;
  }
+ p2 {
+   color: black;
+   text-align: center;
+   text-decoration: none;
+   font-size: 15px;
+   font-family: 'Garamond', sans-serif;
+   width: 500px;
+   border: 2px #f4d34e;
+   margin: auto;
+ }
  .topnav .search-container {
   float: right;
 }
@@ -93,7 +104,7 @@ body {
 .portraits {display: none}
 img {vertical-align: middle;}
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 600px;
   position: relative;
   margin: auto;
 }
@@ -121,7 +132,7 @@ img {vertical-align: middle;}
 .text {
   color: black;
   background-color: white;
-  font-size: 15px;
+  font-size: 30px;
   font-family: Garamond, sans-serif;
   font-weight: bold;
   padding: 8px 12px;
@@ -154,47 +165,47 @@ img {vertical-align: middle;}
 </head>
 
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://i.imgur.com/ScFOaet.png" alt="DingDong! Bell" width="45" height="45"></a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/pcURI5z.png" alt="LAFEL Bell" width="45" height="45"></a>
   <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
-    <form action="/action_page.php">
+    <form action="../HTML/Search.html">
       <input type="text" placeholder="Search for services..." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
-  <a href="/recent">Recent Posts</a>
-  <a href="/contact">Contact</a>
-  <a class="active" href="/about">About Us</a>
-  <a href="/home">Home</a>
+  <a href="../HTML/RecentPosts.html">Recent Posts</a>
+  <a href="../HTML/Contact.html">Contact</a>
+  <a class="active" href="../HTML/About.html">About Us</a>
+  <a href="../HTML/Home.html">Home</a>
 </div>
 
 <body>
   <h1>Our Team</h1>
-  <p>Meet the group that made this project possible</p>
+  <p>Meet the group that made this project possible by clicking below</p>
   <div class="slideshow-container">
 <div class="portraits fade">
   <div class="numbertext">1 / 5</div>
-  <img src="https://www.istockphoto.com/resources/images/PhotoFTLP/1035146258.jpg" style="width:100%">
+  <img src="https://i.imgur.com/PvahGKd.jpg" style="width:100%">
   <div class="text">Dan Dushime</div>
 </div>
 <div class="portraits fade">
   <div class="numbertext">2 / 5</div>
-  <img src="https://image.shutterstock.com/image-photo/attractive-african-young-confident-businesswoman-260nw-1712082700.jpg" style="width:100%">
+  <img src="https://i.imgur.com/jUF8bfi.jpg" style="width:100%">
   <div class="text">Finley St-Denis</div>
 </div>
 <div class="portraits fade">
   <div class="numbertext">3 / 5</div>
-  <img src="https://as.ftcdn.net/v1/pics/home/discover_collections/22Sept/d5e2e74a14e34e7b900df44085d4e5f30d7b9eff.photos.jpg" style="width:100%">
+  <img src="https://i.imgur.com/rYagM4q.png" style="width:100%">
   <div class="text">Laura Ishimwe</div>
 </div>
 <div class="portraits fade">
   <div class="numbertext">4 / 5</div>
-  <img src="https://as.ftcdn.net/v1/pics/home/discover_collections/22Sept/d5e2e74a14e34e7b900df44085d4e5f30d7b9eff.photos.jpg" style="width:100%">
+  <img src="https://i.imgur.com/6kpS8I1.jpg" style="width:100%">
   <div class="text">Lokmane Tabti</div>
 </div>
 <div class="portraits fade">
   <div class="numbertext">5 / 5</div>
-  <img src="https://as.ftcdn.net/v1/pics/home/discover_collections/22Sept/d5e2e74a14e34e7b900df44085d4e5f30d7b9eff.photos.jpg" style="width:100%">
+  <img src="https://i.imgur.com/j1JvYS0.jpg" style="width:100%">
   <div class="text">Séréna Nguegni De Kuété</div>
 </div>
 <a class="prev" onclick="plusSlides(-1)">❮</a>
@@ -208,30 +219,5 @@ img {vertical-align: middle;}
   <span class="dot" onclick="currentSlide(4)"></span>
   <span class="dot" onclick="currentSlide(5)"></span>
 </div>
-<script>
-let slideIndex = 1;
-showSlides(slideIndex);
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-function showSlides(n) {
-  let i;
-  let slides = document.getElementsByClassName("portraits");
-  let dots = document.getElementsByClassName("dot");
-  if (n > slides.length) {slideIndex = 1}    
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";  
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";  
-  dots[slideIndex-1].className += " active";
-}
-</script>
 </body>
 </html>
