--- a/web_design/HTML/Contact.html
+++ b/web_design/HTML/Contact.html
@@ -1,160 +1,58 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>DingDong - Contact</title>
+	<title>DingDong! - Contact</title>
+	<link rel="icon" type="image/x-icon" href="https://i.imgur.com/pcURI5z.png">
+	<link rel="stylesheet" type="text/css" href="../CSS/Styles.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/Contact.css">
 </head>
 <body>
 <style>
-body {
-  margin: 0;
-  font-family: Garamond, Helvetica, sans-serif;
-}
 
-.topnav {
-  overflow: hidden;
-}
-
-.topnav a {
-  float: right;
-  color: #f4d34e;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 27px;
-}
-
-.topnav a:hover {
-  background-color: #f4d34e;
-  color: #605e55;
-}
-
-.topnav a.active {
-  background-color: #f4d34e;
-  color: white;
-}
-.topnav a.logo {
-  float: left;
-  color: #f4d34e;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 27px;
-}
-
-.topnav a.brand {
-  float: left;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 45px;
-  font-family: 'Garamond';
- }
- 
- h1 {
-   color: black;
-   text-align: center;
-   text-decoration: bold;
-   font-size: 38px;
-   font-family: 'Garamond', sans-serif;
- }
- h2 {
-   color: black;
-   text-align: Left;
-   text-decoration: bold;
-   font-size: 17px;
-   font-family: 'Garamond', sans-serif;
- }
- p {
-   color: black;
-   text-decoration: bold;
-   font-size: 15px;
-   font-family: 'Garamond'
- }
- .topnav .search-container {
-  float: right;
-}
-
-.topnav input[type=text] {
-  padding: 6px;
-  margin-top: 8px;
-  font-size: 17px;
-  border: none;
-}
-
-.topnav .search-container button {
-  float: right;
-  padding: 6px 10px;
-  margin-top: 8px;
-  margin-right: 16px;
-  background: #ddd;
-  font-size: 17px;
-  border: 1px;
-  cursor: pointer;
-}
-
-div.a {
-  text-indent: 100px;
-}
-
-div.b {
-   text-indent: 10%;
-}
-
-div.c {
-   text-indent: 100px;
-}
 </style>
 </head>
 <body>
 <div class="topnav">
-  <a class="logo" href="#home"><img src="https://i.imgur.com/QupdNyN.png" alt="DingDong Bell" width="45" height="45"></a>
-  <a class="brand" href="#home">DingDong</a>
+  <a class="logo" href="#home"><img src="https://i.imgur.com/pcURI5z.png" alt="LAFEL Bell" width="45" height="45"></a>
+  <a class="brand" href="#home">DingDong!</a>
   <div class="search-container">
-    <form action="/action_page.php">
+    <form action="../HTML/Search.html">
       <input type="text" placeholder="Search for services..." name="search">
       <button type="submit"><i class="fa fa-search"></i></button>
     </form>
   </div>
-  <a href="#recent">Recent Posts</a>
-  <a class="active" href="#contact">Contact</a>
-  <a href="#about">About Us</a>
-  <a href="#home">Home</a>
+  <a href="../HTML/RecentPosts.html">Recent Posts</a>
+  <a class="active" href="../HTML/Contact.html">Contact</a>
+  <a href="../HTML/About.html">About Us</a>
+  <a href="../HTML/Home.html">Home</a>
 </div>
-<hr/>
-  <h1>GET IN CONTACT WITH US!</h1>
+  <h1><br>GET IN CONTACT WITH US!</h1>
   <div class="a">
-  <form action="/action_page.php">
-    <p><b><label for="fname">NAME*:</label></b></p>
+  <h2>Name*</h2>
   </div>
   <div class="b">
-	<input type="text" placeholder="Enter your name..." name="fname"><br>  
+  <p1>  <u>Enter your name...     </u></p1>
   </div>
   <div class="a">
-  <p><b><label for="email">E-MAIL*:</label><br></b><p>
+  <h2>Email*</h2>
   </div>
   <div class="b">
-  <input type="text" placeholder="Enter your e-mail adress..." name="email"><br>
+  <p1>  <u>Enter your email adress...</u></p1>
   </div>
   <div class="a">
-  <p><b><label for="message">MESSAGE*:</label><br></b></p>
+  <h2>Message*</h2>
   </div>
   <div class="b">
-     <input type="text" placeholder="Type your message..." name="message"><br><br>
-     <div style="float:center;margin: 40px;">
-     <p style="margin-left:50%; margin-right:10%;"><a href="confirm.html" >SUBMIT</a>
-     </div>
-  </form> 
+  <p1>  <u>Type your message here...</u></p1>
   </div>
-  <hr/>
-  	<div style="float:left;margin: 40px;">
-  	<h2><p style="margin-left:20%; margin-right:10%;">DingDong</h2>
-  	<p style="margin-left:20%; margin-right:10%;">Head office:</p>
-  	<p style="margin-left:20%; margin-right:10%;">75 Laurier Ave. E, Ottawa, ON K1N 6N5</p>
-  	</div>
-  <div style="float: center;margin: 40px;">
-  <h2><p style="margin-left:50%;">Contact-us:</h2>
-  <p3><p style="margin-left:50%;">Email adress: info.lafel@gmail.com<br><br></p3>
+  <div class="c">
+  <h2><br><br>LAFEL</h2>
   </div>
+  <p>Head office:</p>
+  <p>75 Laurier Ave. E, Ottawa, ON K1N 6N5</p>
+  <div class="c">
+  <h2><br>Contact-us:</h2>
+  </div>
+  <p3>Email adress:info.lafel@gmail.com</p3>
 </body>
 </html>
